--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.1",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "validator": "^13.12.0",
