--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -w",
+    "build": "tsc",
     "start": "node dist/app.js",
     "test": "mocha"
   },
@@ -24,7 +24,6 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.1",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "validator": "^13.12.0",
@@ -34,7 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "@types/validator": "^13.12.1",
     "typescript": "^5.5.4"
   }
