--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "tsc -w",
+    "build": "tsc",
     "start": "node dist/app.js",
     "test": "mocha"
   },
@@ -22,9 +22,11 @@
     "joi-objectid": "^4.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.8.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.33.5",
     "validator": "^13.12.0",
     "winston": "^3.14.2"
   },
