--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -w",
     "start": "node dist/app.js",
-    "test": "mocha"
+    "test": "jest tests -t=faqRouterClass --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -32,10 +32,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.5.5",
     "@types/validator": "^13.12.1",
+    "chai": "^5.1.2",
+    "jest": "^29.7.0",
+    "mocha": "^10.7.3",
+    "sinon": "^19.0.2",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   }
 }
